feat(capability-studio): add verifier archive parser